RoomEasePhoneGapProject/www/css/index.css
@font-face {
    font-family: "Zag";
    src: url("../font/zag/Zag-Bold.otf") format("opentype");
}

#popupDivider {
    left: 0;
    position: absolute;
    width: 100%;    
}

ul{
    margin:0 0 0 1.25em;
    padding:0;
}

li{
    margin:0;
    padding:0;
    line-height: 1.25em;
}

h1, h2, h3, h4, h5, h6 {
    color: #f8bbd0;
    margin: 1rem 1rem;
    font-family: Zag;
}

a {
    font-family: Zag;
    font-size: 2em;
}

#slide-out a {
    font-size: 1.5em;
}

input[type="text"] {
    font-size: 1.3em;
}

::-webkit-input-placeholder {
    color: #b2dfdb;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 1em;
    font-style: italic;
}

.list-item {
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    transition: box-shadow .25s;
    margin: 1rem 0 0 1rem;
    border-radius: 2px;
    background-color: #80cbc4;
    width: 94%;
    padding: 0.1rem 0.5rem 0.5rem 0.85rem;
}

.popup {
    position: fixed;
    width: 93%;
    height: 83%;
    left: 0%;
    top: 13%;
    background-color: #26a69a;
    transition: box-shadow .25s;
    margin: .5rem 0 1rem 1rem;
    padding: 0 1em 1em 1em;
    border-radius: 4px;
    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
    z-index: 998;
}

.reservation_happening_color {
    background-color: #006400;
}

.reservation_happened_color {
    background-color:#DC381F;
}

.reservation_not_happened_color {
    background-color: #80cbc4;
}

.reservation-item {
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    transition: box-shadow .25s;
    margin: 1rem 0 0 1rem;
    border-radius: 2px;
    width: 94%;
    padding: 0.1rem 0.5rem 0.5rem 0.85rem;
}

.error-popup {
    position: fixed;
    display: none;
    width: 70%;
    height: 20%;
    left: 15%;
    top: 40%;
    background-color: #26a69a;
    transition: box-shadow .25s;
    margin .5rem 0 1rem 1rem;
    padding: 10px;
    border-radius: 4px;
    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
    z-index: 998;
}

#delete-fridge-item-popup{
    position: fixed;
    display: none;
    width: 70%;
    height: 20%;
    left: 15%;
    background-color: #26a69a;
    transition: box-shadow .25s;
    margin .5rem 0 1rem 1rem;
    padding: 10px;
    border-radius: 4px;
    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
    z-index: 998;
}

.popupBackground {
    background-color: white;
    position: fixed;
    width: 100%;
    height: 93%;
    top: 7%;
    display: none;
}

.list-entry {
    height: 67%;
    top:30%;
    width: 100%;
    background-color: #80cbc4; 
    color: white;
    overflow: scroll;
}

.all-reservation-items {
    display:block
}


.delete-reservation-popup {
    position: fixed;
    width: 100%;
    height: 60%;
    top: 1%;
    display: none;
}

.popup-button {
    background-color: #4db6ac;
    box-shadow: none;
    text-align: center;
    width: 30%;
    margin: 0 0 0 0;
    padding: 0;
}

/** the following are components of .popupBackground **/
#name, #descrip-text {
    width: 100%;
    background-color: transparent;
    border-bottom: 1px solid white;
    border-top: 0;
    border-left: 0;
    color: white;
}

#items {
    height: 43%;
    border: 0;
    border-radius: 4px;
    background-color: #4db6ac;
    color: white;
    margin-bottom: 5px;
}

#add-new-resevation-type {
    display: none;
}


#facebook-login {
  background-color: #26A69A;
  position: fixed;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
}

.reservation-form-field {
    margin-bottom: 0; 
    font-size: 2.0em; 
    line-height: 1.25em;
}
 
#filter-reservation-popup{
    display: none;
}

#delete-reservation-popup {
    display: none;
}
    #facebook-login p {
        text-align: center;
        color: #00415d;
        font-size: 1.5em; 
    }
    
    #facebook-login .login-box{
        position:relative;
        margin: 10px auto;
        width: 90%;
        height: 80%;
        background-color: #fff;
        padding: 10px;
        border-radius: 3px;
        -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
      -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
      box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.33);
    }
    
    #facebook-login  .lb-header{
      position:relative;
      font-size: 2.5em;
      color: #00415d;
      margin: 5px 5px 10px 5px;
      padding-bottom:10px;
      border-bottom: 1px solid #eee;
      text-align:center;
    }
    
    #facebook-login .lb-header a{
      margin: 0 25px;
      padding: 0 20px;
      text-decoration: none;
      color: #666;
      font-weight: bold;
      font-size: 15px;
      -webkit-transition: all 0.1s linear;
      -moz-transition: all 0.1s linear;
      transition: all 0.1s linear;
    }
    
    #facebook-login .lb-header .active{
      color: #26A69A;
      font-size: 18px;
    }

     #facebook-login .social-login a {
        text-align: center;
        display: block;
    }

    #facebook-login .social-login{
      margin-left: auto;
      margin-right: auto;
      width: 50%;
      height:auto;
      padding: 10px 0 15px 0;
      border-bottom: 1px solid #eee;
    }
    
    #facebook-login .social-login a{
      text-decoration: none;
      color: #fff;
      border: 1px solid rgba(0,0,0,0.05);
      padding: 12px;
      border-radius: 2px;
      font-size: 12px;
      text-transform: uppercase;
      margin: 0 3%;
      text-align:center;
    }
    
    #facebook-login .social-login a i{
      position: relative;
      float: left;
      width: 20px;
      top: 2px;
    }

    #facebook-login .social-login a:last-child{
      background-color: #49639F;
    }

    #facebook-login #login-box-link {
      font-size:2.3em;
    }
/* ... */

